Fixed wrapping, Rubocop fix, removed unneccesary line breaks

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -174,6 +174,7 @@ details {
       border-radius: 0.25rem;
       border: 0;
       margin-left: 0.5rem;
+      white-space: nowrap;
     }
   }
 
@@ -281,8 +282,4 @@ th {
 
 .submit-ordered-list {
   padding: 0em 3em;
-}
-
-.primary-detail {
-  display: block;
 }
